tests/ui/const-generics/min_const_generics/forbid-self-no-normalize.stderr
error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/forbid-self-no-normalize.rs:12:25
   |
LL |     type ArrayTy = [u8; Self::MAX];
   |                         ^^^^
   |
note: not a concrete type
  --> $DIR/forbid-self-no-normalize.rs:11:27
   |
LL | impl<T> BindsParam<T> for <T as AlwaysApplicable>::Assoc {
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions
   = help: alternatively, you can use `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 1 previous error

